# pitik

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql
agent/: agent.py  tools.py
bot/: telegram_handler.py
core/: config.py
db/: client.py  models.py
src/: main.py
src/agent/: agent.py  schema_tool_input.py  tools.py
src/bot/: telegram_handler.py
src/core/: config.py  logging.py  utils.py
src/db/: client.py  models.py
