[project]
name = "pitik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno<=2.2.13",
    "aiosqlite>=0.22.1",
    "httpx<=0.28.1",
    "openai<=2.44.0",
    "pydantic<=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv<=1.2.2",
    "python-telegram-bot<=22.8",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
]
